k8s/url-shortner-service.deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shortly
spec:
  serviceName: "url-shortener-service"
  replicas: 15
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app: shortly
  template:
    metadata:
      labels:
        app: shortly
    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: shortener
          image: shortly:1.0.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
