k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shortly-svc

spec:
  selector:
    app: shortly
  ports:
    - port: 80
      targetPort: 8000
  type: NodePort
