k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: go-lang-ingress
spec:
  rules:
    - host: go-api.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shortly-svc
                port:
                  number: 80
